unpackaged/main/default/objects/Fulfillment__c/fields/Advice_Fee__c.field-meta.xml
<CustomField>
    <fullName>Advice_Fee__c</fullName>
    <label>Advice Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>