unpackaged/main/default/objects/Fulfillment__c/fields/Advice_Format__c.field-meta.xml
<CustomField>
    <fullName>Advice_Format__c</fullName>
    <formula>CASE(Advice__r.Suitability_meeting_location__c, &quot;Non - Presented&quot;, &quot;Non - Presented&quot;, &quot;WEBEX&quot;, &quot;WEBEX&quot;, &quot;In Person&quot;, &quot;In Person&quot;, &quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advice Format</label>
    <type>Text</type>
</CustomField>