unpackaged/main/default/objects/Fulfillment__c/fields/Advice_Setup_Fee_received__c.field-meta.xml
<CustomField>
    <fullName>Advice_Setup_Fee_received__c</fullName>
    <label>Advice Setup Fee Received</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>