unpackaged/main/default/objects/Fulfillment__c/fields/Adviser__c.field-meta.xml
<CustomField>
    <fullName>Adviser__c</fullName>
    <formula>Household_lookup__r.Owner.FirstName + &quot; &quot; +  Household_lookup__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adviser</label>
    <type>Text</type>
</CustomField>