unpackaged/main/default/objects/Fulfillment__c/fields/Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Review</label>
    <referenceTo>OW_review__c</referenceTo>
    <relationshipLabel>Fulfilment</relationshipLabel>
    <relationshipName>Fulfilment</relationshipName>
    <type>Lookup</type>
</CustomField>