unpackaged/main/default/objects/Fulfillment__c/fields/Clawback_Date__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Date__c</fullName>
    <label>Clawback Date</label>
    <type>Date</type>
</CustomField>