unpackaged/main/default/objects/Fulfillment__c/fields/Date_Chasing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Chasing_Complete__c</fullName>
    <description>The date when we finished chasing the transfer or the client payment</description>
    <label>Date Chasing Complete</label>
    <type>Date</type>
</CustomField>