unpackaged/main/default/objects/Fulfillment__c/fields/Date_Fulfilment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Fulfilment_Complete__c</fullName>
    <description>The date when the checklist is completed. This is not when the fulfilment action took place.</description>
    <label>Date Fulfilment Complete</label>
    <type>Date</type>
</CustomField>