unpackaged/main/default/objects/Fulfillment__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Receiving Financial product</inlineHelpText>
    <label>Destination</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Fulfilment (Destination)</relationshipLabel>
    <relationshipName>Fulfilment1</relationshipName>
    <type>Lookup</type>
</CustomField>