unpackaged/main/default/objects/Fulfillment__c/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <inlineHelpText>If pension, provide the NET figure</inlineHelpText>
    <label>Expected Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>