unpackaged/main/default/objects/Fulfillment__c/fields/In_Force_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Force_Date__c</fullName>
    <label>In Force Date</label>
    <type>Date</type>
</CustomField>