unpackaged/main/default/objects/Fulfillment__c/fields/Initial_commission__c.field-meta.xml
<CustomField>
    <fullName>Initial_commission__c</fullName>
    <label>Initial commission</label>
    <length>10</length>
    <type>Text</type>
</CustomField>