unpackaged/main/default/objects/Fulfillment__c/fields/Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee__c</fullName>
    <inlineHelpText>To be charged specifically to this plan</inlineHelpText>
    <label>Advice Setup Fee (£)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>