unpackaged/main/default/objects/Fulfillment__c/fields/Is_this_new_AuA__c.field-meta.xml
<CustomField>
    <fullName>Is_this_new_AuA__c</fullName>
    <label>Is this new Assets under Advice (AuA)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>