unpackaged/main/default/objects/Fulfillment__c/fields/NewInvestmentMandate__c.field-meta.xml
<CustomField>
    <fullName>NewInvestmentMandate__c</fullName>
    <description>Used to make clear which new portfolio is being used for portfolio switch fulfilment</description>
    <label>New investment mandate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Investment_Strategies</valueSetName>
    </valueSet>
</CustomField>