unpackaged/main/default/objects/Fulfillment__c/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <formula>IF(NOT(ISBLANK(Household_lookup__r.OctopusMoneyRecord__c)), CASESAFEID(Household_lookup__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM Record</label>
    <type>Text</type>
</CustomField>