unpackaged/main/default/objects/Fulfillment__c/fields/Ongoing_commission__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_commission__c</fullName>
    <label>Ongoing commission</label>
    <length>10</length>
    <type>Text</type>
</CustomField>