unpackaged/main/default/objects/Fulfillment__c/fields/PhasingFrequency__c.field-meta.xml
<CustomField>
    <fullName>PhasingFrequency__c</fullName>
    <description>The frequency with which phases will occur</description>
    <label>Phasing frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>