unpackaged/main/default/objects/Fulfillment__c/fields/PhasingPeriod__c.field-meta.xml
<CustomField>
    <fullName>PhasingPeriod__c</fullName>
    <description>The number of phases that will occur</description>
    <label>Phasing period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>