unpackaged/main/default/objects/Fulfillment__c/fields/Premium_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Premium_Frequency__c</fullName>
    <label>Premium Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>