unpackaged/main/default/objects/Fulfillment__c/fields/PreviousInvestmentMandate__c.field-meta.xml
<CustomField>
    <fullName>PreviousInvestmentMandate__c</fullName>
    <description>Used to make clear what the previous portfolio was for portfolio switch fulfilment</description>
    <label>Previous investment mandate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_Investment_Strategies</valueSetName>
    </valueSet>
</CustomField>