unpackaged/main/default/objects/Fulfillment__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the recommendation that triggered this fulfilment</description>
    <label>Recommendation</label>
    <referenceTo>Recommendation__c</referenceTo>
    <relationshipLabel>Fulfilment</relationshipLabel>
    <relationshipName>Fulfilment</relationshipName>
    <type>Lookup</type>
</CustomField>