unpackaged/main/default/objects/Fulfillment__c/fields/Replacement_Policy__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Policy__c</fullName>
    <label>Replacement Policy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>