unpackaged/main/default/objects/Fulfillment__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Add the Household first to filter for records only from this household</inlineHelpText>
    <label>Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FinServ__FinancialAccount__c.Household__c</field>
            <operation>equals</operation>
            <valueField>$Source.Household_lookup__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Fulfilment (Source)</relationshipLabel>
    <relationshipName>Fulfilment</relationshipName>
    <type>Lookup</type>
</CustomField>