unpackaged/main/default/objects/Fulfillment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setup</fullName>
                <default>true</default>
                <label>Setup</label>
            </value>
            <value>
                <fullName>Awaiting suitability outcome</fullName>
            </value>
            <value>
                <fullName>Not taken up</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Submit forms</fullName>
            </value>
            <value>
                <fullName>Awaiting provider action</fullName>
            </value>
            <value>
                <fullName>Chasing transfer (within SLA)</fullName>
            </value>
            <value>
                <fullName>Chasing transfer (outside SLA)</fullName>
            </value>
            <value>
                <fullName>Awaiting client payment</fullName>
            </value>
            <value>
                <fullName>Processing Protection</fullName>
            </value>
            <value>
                <fullName>Investment Checks</fullName>
            </value>
            <value>
                <fullName>Finalise fulfilment</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Collect pre-requisites</fullName>
            </value>
            <value>
                <fullName>Submit fulfilment</fullName>
            </value>
            <value>
                <fullName>Chase transfer</fullName>
            </value>
            <value>
                <fullName>Chase client payment</fullName>
            </value>
            <value>
                <fullName>Await first regular</fullName>
            </value>
            <value>
                <fullName>Chase provider</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>