unpackaged/main/default/objects/Fulfillment__c/fields/Suitability_Outcome_Complete__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Outcome_Complete__c</fullName>
    <label>Suitability Outcome Complete</label>
    <type>Date</type>
</CustomField>