unpackaged/main/default/objects/Fulfillment__c/fields/Top_Up_of_Existing__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_of_Existing__c</fullName>
    <label>Top Up of Existing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>