unpackaged/main/default/objects/Fulfillment__c/recordTypes/Annuity_Purchase.recordType-meta.xml
<RecordType>
    <fullName>Annuity_Purchase</fullName>
    <active>false</active>
    <label>Annuity Purchase</label>
</RecordType>