unpackaged/main/default/objects/Fulfillment__c/recordTypes/Change_to_fees.recordType-meta.xml
<RecordType>
    <fullName>Change_to_fees</fullName>
    <active>false</active>
    <label>Change to fees</label>
</RecordType>