unpackaged/main/default/objects/Fulfillment__c/recordTypes/FAD_PCLS_Income.recordType-meta.xml
<RecordType>
    <fullName>FAD_PCLS_Income</fullName>
    <active>false</active>
    <label>FAD - PCLS &amp; Income</label>
</RecordType>