unpackaged/main/default/objects/Fulfillment__c/recordTypes/Internal_transfer.recordType-meta.xml
<RecordType>
    <fullName>Internal_transfer</fullName>
    <active>true</active>
    <label>Internal Transfer</label>
</RecordType>