unpackaged/main/default/objects/Fulfillment__c/recordTypes/Lump_sum_investment.recordType-meta.xml
<RecordType>
    <fullName>Lump_sum_investment</fullName>
    <active>true</active>
    <label>Lump Sum Investment</label>
</RecordType>