unpackaged/main/default/objects/Fulfillment__c/recordTypes/OpenProduct.recordType-meta.xml
<RecordType>
    <fullName>OpenProduct</fullName>
    <active>true</active>
    <description>Record type used for fulfilment of a new product</description>
    <label>Open product</label>
</RecordType>