unpackaged/main/default/objects/Fulfillment__c/recordTypes/OW_octopus_product_switch.recordType-meta.xml
<RecordType>
    <fullName>OW_octopus_product_switch</fullName>
    <active>true</active>
    <description>Covers switching a customer between 2 different Octopus products</description>
    <label>Octopus product switch</label>
</RecordType>