unpackaged/main/default/objects/Fulfillment__c/recordTypes/Regular_Contribution.recordType-meta.xml
<RecordType>
    <fullName>Regular_Contribution</fullName>
    <active>true</active>
    <label>Regular Contribution</label>
</RecordType>