unpackaged/main/default/objects/Fulfillment__c/recordTypes/Regular_withdrawal.recordType-meta.xml
<RecordType>
    <fullName>Regular_withdrawal</fullName>
    <active>false</active>
    <label>Regular Withdrawal</label>
</RecordType>