unpackaged/main/default/objects/Fulfillment__c/recordTypes/Trust.recordType-meta.xml
<RecordType>
    <fullName>Trust</fullName>
    <active>true</active>
    <label>Trust</label>
</RecordType>