unpackaged/main/default/objects/Fulfillment__c/recordTypes/UFPLS.recordType-meta.xml
<RecordType>
    <fullName>UFPLS</fullName>
    <active>false</active>
    <label>UFPLS</label>
</RecordType>