unpackaged/main/default/objects/Fulfillment__c/validationRules/OW_destination_product_required.validationRule-meta.xml
<ValidationRule>
    <fullName>OW_destination_product_required</fullName>
    <active>true</active>
    <description>Ensures that a destination product is added by a given stage in the fulfilment process.</description>
    <errorConditionFormula>OR(
RecordType.DeveloperName = &quot;Lump_sum_investment&quot;, 
RecordType.DeveloperName = &quot;Regular_Contribution&quot;, 
RecordType.DeveloperName = &quot;Transfer_cash_re_reg&quot;,
RecordType.DeveloperName = &quot;Transfer_cash&quot;,
RecordType.DeveloperName = &quot;Transfer_re_reg&quot; )
&amp;&amp; 
OR(
ISPICKVAL( Status__c, &quot;Complete&quot;),
ISPICKVAL( Status__c, &quot;Finalise fulfilment&quot;),
ISPICKVAL( Status__c, &quot;Investment Checks&quot;),
ISPICKVAL( Status__c, &quot;Processing Protection&quot;),
ISPICKVAL( Status__c, &quot;Awaiting client payment&quot;),
ISPICKVAL( Status__c, &quot;Chasing transfer (outside SLA)&quot;),
ISPICKVAL( Status__c, &quot;Chasing transfer (within SLA)&quot;),
ISPICKVAL( Status__c, &quot;Awaiting provider action&quot;))
&amp;&amp;
ISBLANK( Destination__c)
&amp;&amp;
NOT(ISPICKVAL($User.OW_user_type__c, &quot;Integration&quot;))</errorConditionFormula>
    <errorDisplayField>Destination__c</errorDisplayField>
    <errorMessage>A destination product is required as you are progressing beyond the submit forms status.</errorMessage>
</ValidationRule>