unpackaged/main/default/objects/Fulfillment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advice__c</columns>
    <columns>Household_lookup__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Checklist_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Setup,Awaiting suitability outcome,Not taken up,On hold,Submit forms,Chasing transfer (within SLA),Chasing transfer (outside SLA),Awaiting client payment,Processing Protection,Investment Checks,Finalise fulfilment,Complete,Cancelled</value>
    </filters>
    <filters>
        <field>Expected_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Setup,Awaiting suitability outcome,Not taken up,On hold,Submit forms,Chasing transfer (within SLA),Chasing transfer (outside SLA),Awaiting client payment,Processing Protection,Investment Checks,Finalise fulfilment</value>
    </filters>
    <label>All Kanban</label>
</ListView>